# raptor-gtfs-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  check_stop_schedules.py  pyproject.toml  raptor_query.py  read.py
.github/workflows/: ci.yml
examples/: run_convert.sh  run_validate.sh
profiles/: run_lyon.py
raptor_pipeline/: __init__.py  api.py  cli.py  version.py  visualize.py
raptor_pipeline/gtfs/: __init__.py  calendar.py  models.py  modes.py  reader.py  validator.py
raptor_pipeline/optimization/: indexing.py  pruning.py
raptor_pipeline/output/: binary.py  json.py  protobuf.py
raptor_pipeline/transform/: compression.py  routes.py  stops.py  transfers.py  trips.py
src/: CommandLineInterface.py  PipelineConverter.py  PipelineRunner.py  Version.py  Visualizer.py  __init__.py  api.py  cli.py
src/gtfs/: CalendarAnalyzer.py  GTFSReader.py  ModeAnalyzer.py  calendar.py  models.py  modes.py  reader.py
src/gtfs/models/: Agency.py  Calendar.py  CalendarDate.py  ConvertConfig.py  Manifest.py  NetworkIndex.py  Route.py  RouteData.py  ServicePeriod.py  Stop.py  StopData.py  StopTime.py  Transfer.py  Trip.py  TripData.py
src/optimization/: NetworkIndexBuilder.py  Pruner.py  indexing.py  pruning.py
src/output/: BinarySerializer.py  BinaryWriter.py  IndexWriter.py  JsonSerializer.py  ProtobufSerializer.py  RoutesWriter.py  StopsWriter.py  binary.py  json.py  protobuf.py
src/transform/: RouteBuilder.py  StopBuilder.py  TimeCompressor.py  TransferBuilder.py  TripBuilder.py  routes.py  stops.py  transfers.py  trips.py
tests/: conftest.py  test_benchmarks.py  test_cli.py  test_end_to_end.py  test_indexing.py  test_output_binary.py  test_output_json.py  test_reader.py  test_transform.py  test_validator.py
tests/fixtures/gtfs_branching/: routes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
tests/fixtures/gtfs_edgecases/: agencies.txt  calendar.txt  routes.txt  stop_times.txt  stops.txt  (+2 more)
(+4 files in other folders)
