[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raptor-gtfs-pipeline"
version = "0.1.0"
description = "Convert GTFS datasets to compact binary formats for RAPTOR routing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Raptor GTFS Pipeline Contributors" }
]
keywords = ["gtfs", "raptor", "transit", "routing", "binary"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
]

[project.scripts]
raptor-gtfs = "raptor_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["raptor_pipeline"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "ANN", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "benchmark: mark test as a benchmark",
]
